--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,5 @@
 # Uncomment this line to define a global platform for your project
- platform :ios, '14.0'
+ platform :ios, '15.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -43,42 +43,19 @@ post_install do |installer|
   installer.pods_project.targets.each do |target|
     target.build_configurations.each do |config|
       flutter_additional_ios_build_settings(target)
+
+      # 🔥 Force iOS 15 everywhere
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
+
       config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
-              '$(inherited)',
-
-              ## dart: PermissionGroup.calendar
-              # 'PERMISSION_EVENTS=1',
-
-              ## dart: PermissionGroup.reminders
-              # 'PERMISSION_REMINDERS=1',
-
-              ## dart: PermissionGroup.contacts
-              # 'PERMISSION_CONTACTS=1',
-
-              ## dart: PermissionGroup.camera
-               'PERMISSION_CAMERA=1',
-
-              ## dart: PermissionGroup.microphone
-               'PERMISSION_MICROPHONE=1',
-
-              ## dart: PermissionGroup.speech
-              # 'PERMISSION_SPEECH_RECOGNIZER=1',
-
-              ## dart: PermissionGroup.photos
-               'PERMISSION_PHOTOS=1',
-
-              ## dart: [PermissionGroup.location, PermissionGroup.locationAlways, PermissionGroup.locationWhenInUse]
-               'PERMISSION_LOCATION=1',
-
-              ## dart: PermissionGroup.notification
-               'PERMISSION_NOTIFICATIONS=1',
-
-              ## dart: PermissionGroup.mediaLibrary
-              # 'PERMISSION_MEDIA_LIBRARY=1',
-
-              ## dart: PermissionGroup.sensors
-              # 'PERMISSION_SENSORS=1'
-         ]
+        '$(inherited)',
+        'PERMISSION_CAMERA=1',
+        'PERMISSION_MICROPHONE=1',
+        'PERMISSION_PHOTOS=1',
+        'PERMISSION_LOCATION=1',
+        'PERMISSION_NOTIFICATIONS=1',
+      ]
     end
   end
 end
+
