--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,31 +3,24 @@ workflows:
     name: iOS Debug Build
     max_build_duration: 60
     environment:
-      vars:
-        # Add any environment variables here if needed
-      flutter: stable
       xcode: latest
     scripts:
       - name: Clean Podfile.lock
         script: |
-          cd ios
           if [ -f Podfile.lock ]; then
             echo "Deleting Podfile.lock"
             rm Podfile.lock
           fi
-          cd ..
       - name: Install Pods
         script: |
-          cd ios
-          pod install --repo-update
-          cd ..
+          if [ -f Podfile ]; then
+            pod install --repo-update
+          fi
       - name: Build Debug iOS App
         script: |
           xcodebuild \
-            -workspace ios/Runner.xcworkspace \
-            -scheme Runner \
+            -scheme FinorimaMobileApp \
             -configuration Debug \
-            -sdk iphoneos \
             clean build
     artifacts:
-      - ios/Runner/Build/Products/Debug-iphoneos/*.app
+      - build/Debug-iphoneos/*.app
